--- a/cantam/src/components/pagescss/NavbarStyles.css
+++ b/cantam/src/components/pagescss/NavbarStyles.css
@@ -7,6 +7,7 @@
     width: 100%;
     height: 90px;
     z-index: 10;
+    background-color: white;
 }
 
 .header-bg{
@@ -29,6 +30,7 @@
 
 .hamburger{
     display: none;
+    color: black;
 }
 
 @media screen and (max-width: 1040px) {
@@ -38,7 +40,7 @@
         align-items: center;
         width: 100%;
         height: 100vh;
-        background: rgba(0, 0, 0, 0.9);
+        background: rgba(255, 255, 255, 0.9);
         position: absolute;
         top: 0;
         left: -100%;
@@ -60,5 +62,6 @@
 
     .hamburger{
         display: initial;
+        color: black;
     }
 }
