--- a/cantam/src/components/HeroImg.css
+++ b/cantam/src/components/HeroImg.css
@@ -34,17 +34,20 @@
     top: 50%;
     left: 50%;
     text-align: center;
+
 }
 
 .hero .content h1{
     font-size: 4rem;
     padding: 0.6rem 0 1.5rem;
+    color: white;
 }
 
 .hero .content p{
     font-size: 1.4rem;
     font-weight: 200;
     text-transform: uppercase;
+    color: white;
 }
 
 .content .btn{
